[gd_scene load_steps=5 format=2]

[ext_resource path="res://PettingZoo/PeonChild.gd" type="Script" id=1]
[ext_resource path="res://PettingZoo/peon_adult.png" type="Texture" id=2]

[sub_resource type="CircleShape2D" id=7]
radius = 12.0

[sub_resource type="CircleShape2D" id=8]
radius = 156.115

[node name="PeonAdult" type="KinematicBody2D"]
collision_layer = 2
collision_mask = 2
input_pickable = true
script = ExtResource( 1 )

[node name="Sprite" type="Sprite" parent="."]
texture = ExtResource( 2 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource( 7 )

[node name="ChickenSearch" type="Area2D" parent="."]
collision_layer = 8388609
input_pickable = false

[node name="CollisionShape2D" type="CollisionShape2D" parent="ChickenSearch"]
shape = SubResource( 8 )

[node name="Line2D" type="Line2D" parent="."]

[node name="Label" type="Label" parent="."]
margin_right = 40.0
margin_bottom = 32.0

[connection signal="input_event" from="." to="." method="_on_Peon_input_event"]
[connection signal="area_entered" from="ChickenSearch" to="." method="_on_ChickenSearch_area_entered"]
