[gd_scene load_steps=12 format=2]

[ext_resource path="res://Coop/GrassLarge.jpg" type="Texture" id=1]
[ext_resource path="res://Coop/StatsPanel.gd" type="Script" id=2]
[ext_resource path="res://chicken/portraits/rooster.jpg" type="Texture" id=3]
[ext_resource path="res://PettingZoo/peon_child.png" type="Texture" id=4]
[ext_resource path="res://PettingZoo/PettingZoo.gd" type="Script" id=5]
[ext_resource path="res://PettingZoo/peon_adult.png" type="Texture" id=6]
[ext_resource path="res://PettingZoo/PeonChild.gd" type="Script" id=7]

[sub_resource type="InputEventAction" id=5]
action = "coop"

[sub_resource type="ShortCut" id=6]
shortcut = SubResource( 5 )

[sub_resource type="CircleShape2D" id=7]

[sub_resource type="CircleShape2D" id=8]
radius = 99.0454

[node name="PettingZoo" type="Node2D"]
script = ExtResource( 5 )

[node name="Pens" type="Node2D" parent="."]

[node name="Large" type="ReferenceRect" parent="Pens"]
modulate = Color( 1, 1, 1, 0.498039 )
margin_left = -131.0
margin_top = 11.0
margin_right = 947.0
margin_bottom = 797.0
mouse_filter = 2
mouse_default_cursor_shape = 2
editor_only = false

[node name="Position2D" type="Position2D" parent="Pens/Large"]
position = Vector2( 150, 144 )

[node name="Medium" type="ReferenceRect" parent="Pens"]
modulate = Color( 1, 1, 1, 0.498039 )
margin_left = 38.0
margin_top = 107.0
margin_right = 830.0
margin_bottom = 657.0
mouse_filter = 2
mouse_default_cursor_shape = 2
editor_only = false

[node name="Position2D" type="Position2D" parent="Pens/Medium"]
position = Vector2( 115, 108 )

[node name="Starter" type="ReferenceRect" parent="Pens"]
modulate = Color( 1, 1, 1, 0.498039 )
margin_left = 132.0
margin_top = 218.0
margin_right = 773.0
margin_bottom = 586.0
mouse_filter = 2
mouse_default_cursor_shape = 2
editor_only = false
__meta__ = {
"_edit_lock_": true
}

[node name="Position2D" type="Position2D" parent="Pens/Starter"]
position = Vector2( 139, 109 )

[node name="TextureRect" type="TextureRect" parent="."]
margin_left = 12.0
margin_top = 107.0
margin_right = 1090.0
margin_bottom = 893.0
mouse_filter = 2
texture = ExtResource( 1 )
__meta__ = {
"_edit_lock_": true
}

[node name="Camera2D" type="Camera2D" parent="."]
position = Vector2( 577, 358 )
current = true

[node name="UI" type="CanvasLayer" parent="."]

[node name="StatsPanel" type="Panel" parent="UI"]
anchor_left = 1092.0
anchor_top = 5.0
anchor_right = 1092.0
anchor_bottom = 5.0
margin_left = -1.57139e+06
margin_top = -4489.0
margin_right = -1.57105e+06
margin_bottom = -3848.0
mouse_filter = 2
script = ExtResource( 2 )

[node name="Portrait" type="Sprite" parent="UI/StatsPanel"]
position = Vector2( 148.5, 195.672 )
scale = Vector2( 0.201642, 0.201642 )
texture = ExtResource( 3 )

[node name="Name" type="Label" parent="UI/StatsPanel"]
margin_left = 4.0
margin_top = 6.0
margin_right = 51.0
margin_bottom = 20.0
text = "Mignon"

[node name="RichTextStats" type="RichTextLabel" parent="UI/StatsPanel"]
margin_left = 38.0
margin_top = 340.0
margin_right = 290.0
margin_bottom = 520.0
text = "Breed: brown
Wins: 5 
Fatigue: 3
5 days old
"

[node name="ToCoop" type="Button" parent="UI"]
margin_left = 12.0
margin_top = 12.0
margin_right = 188.0
margin_bottom = 96.0
rect_min_size = Vector2( 0, 48 )
shortcut = SubResource( 6 )
text = "TO COOP"

[node name="PeonAdult" type="Sprite" parent="."]
position = Vector2( 706, 507 )
texture = ExtResource( 6 )

[node name="PeonChild" type="KinematicBody2D" parent="."]
position = Vector2( 486, 453 )
collision_layer = 2
collision_mask = 2
input_pickable = true
script = ExtResource( 7 )

[node name="PeonChild" type="Sprite" parent="PeonChild"]
texture = ExtResource( 4 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="PeonChild"]
visible = false
shape = SubResource( 7 )

[node name="ChickenSearch" type="Area2D" parent="PeonChild"]
input_pickable = false

[node name="CollisionShape2D" type="CollisionShape2D" parent="PeonChild/ChickenSearch"]
shape = SubResource( 8 )

[node name="Line2D" type="Line2D" parent="PeonChild"]

[node name="Label" type="Label" parent="PeonChild"]
margin_right = 40.0
margin_bottom = 32.0

[connection signal="pressed" from="UI/ToCoop" to="." method="_on_ToCoop_pressed"]
[connection signal="area_entered" from="PeonChild/ChickenSearch" to="PeonChild" method="_on_ChickenSearch_area_entered"]
